Fixed width of generic tasks card, too small with short description text

--- a/app/assets/stylesheets/components/_generic_tasks.scss
+++ b/app/assets/stylesheets/components/_generic_tasks.scss
@@ -45,3 +45,7 @@
   color: white;
   font-size: 38px;
 }
+
+.generic-task-display {
+  min-width: 80vw;
+}
